--- a/src/app/document-mom/document-mom.component.html
+++ b/src/app/document-mom/document-mom.component.html
@@ -180,7 +180,7 @@
             </li>
           </ul>
 
-          <div [ngbNavOutlet]="nav" class="mt-2"></div>
+          <div [ngbNavOutlet]="nav" class=""></div>
 
         </div>
     </section>
