--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           </div>
           <ul class="navigation nav-user">
             <li>
-              <a href="#" class="info-btn"><i class="fc-info dark"></i></a>
+              <a routerLinkActive="active" routerLink="about" class="info-btn"><i class="fc-info dark"></i></a>
             </li>
             <li>
               <a href="#" class="profile-btn fc-user"
