--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,22 +1,26 @@
 <div class="wrapper">
-  <div class="row row-zero">
-    <div class="col-md-7 col-sm-12">
-      <div class="graybg">
-        <div class="cust-card">
-          <h2>My Action Items</h2>
+  <section>
+    <div class="container">
+      <div class="row row-zero">
+        <div class="col-md-7 col-sm-12">
+          <div class="graybg">
+            <div class="cust-card">
+              <h2>My Action Items</h2>
 
-          <app-pie-chart></app-pie-chart>
+              <app-pie-chart></app-pie-chart>
 
-          <app-meeting-data-tbl></app-meeting-data-tbl>
+              <app-meeting-data-tbl></app-meeting-data-tbl>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 col-sm-12">
+          <div class="nicescroll-box">
+            <div class="wrap">
+              <app-minutes-of-meetings></app-minutes-of-meetings>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-5 col-sm-12">
-      <div class="nicescroll-box">
-        <div class="wrap">
-          <app-minutes-of-meetings></app-minutes-of-meetings>
-        </div>
-      </div>
-    </div>
-  </div>
+  </section>
 </div>
