--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,6 +2,11 @@
   <section>
       <div class="container">
           <h3>About</h3>
+          <div class="main-container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, expedita suscipit fugit illo veniam cupiditate ab eveniet assumenda harum quaerat libero ratione saepe eius porro tenetur culpa iusto laudantium. Molestiae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt sapiente mollitia officiis pariatur assumenda voluptatem recusandae, molestias consequuntur esse, tempore repudiandae sequi? Eius magnam quas quibusdam consectetur. Omnis, suscipit repellendus!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt vel pariatur voluptatem ut, ullam iste aut quia nulla, quisquam facere, recusandae quis temporibus distinctio repellat illo dolorum tempore commodi optio.</p>
+          </div>
       </div>
   </section>
 </div>
