--- a/src/app/document-mom/document-mom.component.scss
+++ b/src/app/document-mom/document-mom.component.scss
@@ -1,11 +1,14 @@
 /*******Tabs*************/
 .tab-content {background: #fff;padding: 1rem;}
-.nav-tabs {border-bottom:0;}
-.nav-tabs .nav-item + .nav-item {margin-left:0.5rem}
-.nav-tabs .nav-link {border-radius: 0;font-size: 1rem;position: relative;color: #515151;background: #b9c1ce;margin-bottom: 5px;}
-.nav-tabs .nav-link.active{background: #3f84fc;color:#fff;}
-.nav-tabs .nav-link.active:after, .nav-pills .show>.nav-link:after{content:'';position: absolute;bottom: -13px;border-left: 16px solid transparent;border-right: 16px solid transparent;border-top: 13px solid #3f84fc;width: 0;height: 0;left: 0;right: 0;margin: 0 auto;}
-.nav-tabs .nav-link.success{background-color: #28a745;color: #fff;}
+.nav-tabs {border-bottom:0;
+
+    .nav-link {border-radius: 0;font-size: 1rem;position: relative;color: #515151;background: #b9c1ce;margin-bottom: 5px;
+      .active{background: #3f84fc;color:#fff;}
+      .active:after, .nav-pills .show>  :after{content:'';position: absolute;bottom: -13px;border-left: 16px solid transparent;border-right: 16px solid transparent;border-top: 13px solid #3f84fc;width: 0;height: 0;left: 0;right: 0;margin: 0 auto;}
+      .success{background-color: #28a745;color: #fff;}
+    }
+    .nav-item + .nav-item {margin-left:0.5rem}
+}
 #meetingSetup .col-form-label, #SessionTopic .col-form-label { padding-left: 12px; padding-right: 12px;}
 .date-picker input {position: relative;z-index: 1;background: none;}
 .date-picker input:before {content:'...';position: absolute;color: #000;left: 0;top:0;width: 4rem;height: 4rem;background: #ddd;display: inline-block;z-index: 9;}
