--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -8,20 +8,20 @@
         a { display: block; padding:13px 16px 13px 54px; color: #fff;font-family:'Ambit';
           i {position: absolute; left:12px;top:5px;}
           &:hover { /*background: #fff;*/ color:#181f2c; text-decoration: none;}
-          .active { /*background: #fff;*/ color:#181f2c; text-decoration: none;}
-          .active:after { width: 100%;}
+          &.active { /*background: #fff;*/ color:#181f2c; text-decoration: none;}
+          &.active:after { width: 100%;}
           &:hover .fc-home:before,
-          .active .fc-home:before { background-image: url(/assets/images/common/icons/fc-home-d.png); }
+          &.active .fc-home:before { background-image: url(/assets/images/common/icons/fc-home-d.png); }
           &:hover .fc-user-plus:before,
-          .active .fc-user-plus:before { background-image: url(/assets/images/common/icons/fc-user-plus-d.png); }
+          &.active .fc-user-plus:before { background-image: url(/assets/images/common/icons/fc-user-plus-d.png); }
           &:hover .fc-list-thumb:before,
-          .active .fc-list-thumb:before { background-image: url(/assets/images/common/icons/fc-list-thumb-d.png); }
+          &.active .fc-list-thumb:before { background-image: url(/assets/images/common/icons/fc-list-thumb-d.png); }
           &:hover .fc-map-marker:before,
-          .active .fc-map-marker:before { background-image: url(/assets/images/common/icons/fc-map-marker-d.png); }
+          &.active .fc-map-marker:before { background-image: url(/assets/images/common/icons/fc-map-marker-d.png); }
           &:hover .fc-info:before,
-          .active .fc-info:before { background-image: url(/assets/images/common/icons/fc-info-d.png); }
+          &.active .fc-info:before { background-image: url(/assets/images/common/icons/fc-info-d.png); }
           &:hover .fc-all-documents:before,
-          .active .fc-all-documents.dark:before { background-image: url(/assets/images/common/icons/fc-all-documents-d.png); }
+          &.active .fc-all-documents:before { background-image: url(/assets/images/common/icons/fc-all-documents-d.png); }
         }
       // a, .card-header {display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center;}
       }
@@ -52,6 +52,6 @@
   .sidenav > ul > li > a { padding:25px 0 ;}
   .sidenav {padding-top:150px}
 
-  
+
   .sidenavClosed .top-nav {left:0px !important}
 }
