--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,8 @@ body {
 .row-zero > [class^="col"]{padding-left:0px;padding-right:0px;}
 
 .container.fluid { width:100%; max-width: none; }
-.btn {border-radius:0 !important; font-weight:600 !important;}
+.btn {border-radius:0 !important;}
+.btn + .btn {margin-left:0.5rem}
 .btn-primary{background-color: #17a2b8; border: 0}
 .btn-primary:hover{background-color: #1b5fd6; border: 0}
 .btn-secondary{background-color: #fb6362; border: 0;}
@@ -70,8 +71,6 @@ body {
 .fc-user-plus.green:before { background-image: url(/assets/images/common/icons/fc-user-plus-green.png); }
 .fc-list-thumb:before { background-image: url(/assets/images/common/icons/fc-list-thumb.png); }
 .fc-list-thumb.dark:before { background-image: url(/assets/images/common/icons/fc-list-thumb-d.png); }
-.fc-all-documents:before { background-image: url(/assets/images/common/icons/fc-all-documents.png); }
-.fc-all-documents.dark:before { background-image: url(/assets/images/common/icons/fc-all-documents-d.png); }
 .fc-map-marker:before { background-image: url(/assets/images/common/icons/fc-map-marker.png); }
 .fc-map-marker.dark:before { background-image: url(/assets/images/common/icons/fc-map-marker-d.png); }
 .fc-info:before { background-image: url(/assets/images/common/icons/fc-info.png); }
@@ -84,12 +83,13 @@ body {
 .fc-copy.dark:before { background-image: url(/assets/images/common/icons/fc-copy-d.png); }
 .fc-search:before { background-image: url(/assets/images/common/icons/fc-search.png); }
 .fc-search.dark:before { background-image: url(/assets/images/common/icons/fc-search-d.png); }
+.fc-all-documents:before { background-image: url(/assets/images/common/icons/fc-all-documents.png); }
 /* Custom Icons */
 
 
 .wrapper {display: inline-block;margin: 65px 0 0 220px;transition: all 0.3s;overflow: hidden;width:calc(100% - 220px);}
 .sidenavClosed .wrapper {margin:65px 0px 0 0px; transition: all 0.3s;width:calc(100% - 0%);}
-
+.main-container p {text-align:justify;}
 
 /**TopMenu Css**/
 .top-menu {display:inline-block;
@@ -113,21 +113,23 @@ body {
   }
   .copy-txt {display:none;}
 }
-
+.main-container {background:#fff; width:100%; display:inline-block;padding:1rem;}
 
 .graybg {background:#f7f7f7;height:100%;}
 .tbl-form.table thead th {border-top:0;border-bottom:0;vertical-align: top;font-size:14px; font-family: 'Microsoft New Tai Lue';}
 .tbl-form.table td, .tbl-form.table th {border-top:0;}
 .tbl-form.table td {font-size:15px; padding:6px 11px;line-height: normal;}
-
-.wrap .card {border-radius:0; padding:10px 15px 0 15px; border:0;}
+.table.table-bordered th, .table.table-bordered td {font-size:14px;}
+.table.table-bordered td {padding:0.50rem;}
+.table .btn {padding:0.1rem 1.1rem}
+// .wrap .card {border-radius:0; padding:510px 15px 0 15px; border:0;}
 .cust-card {border-radius:0; padding:10px 15px 0 25px; border:0;
   h2 {line-height:30px; display: inline-block;vertical-align: middle;position: relative;}
 }
 
 
 @media (max-width: 576.98px) {
-  
+
 }
 
 
