updated search css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,6 +120,7 @@ body {
 .tbl-form.table td, .tbl-form.table th {border-top:0;}
 .tbl-form.table td {font-size:15px; padding:6px 11px;line-height: normal;}
 .table.table-bordered th, .table.table-bordered td {font-size:14px;}
+.table.table-bordered th {vertical-align: top;}
 .table.table-bordered td {padding:0.50rem;}
 .table .btn {padding:0.1rem 1.1rem}
 // .wrap .card {border-radius:0; padding:510px 15px 0 15px; border:0;}
