--- a/src/app/track-action/track-action.component.html
+++ b/src/app/track-action/track-action.component.html
@@ -22,7 +22,7 @@
                     <td>{{data.meetingStartDate}}</td>
                     <td>{{data.meetingEndDate}}</td>
                     <td>{{data.meetingLocation}}</td>
-                    <td align="center"><a href="#" class="btn btn-sm btn-primary">{{data.actionView}}</a></td>
+                    <td align="center"><a href="#" class="btn btn-sm btn-primary">View</a></td>
                   </tr>
                 </tbody>
               </table>
