--- a/src/app/document-mom/document-mom.component.html
+++ b/src/app/document-mom/document-mom.component.html
@@ -21,11 +21,11 @@
                     </div>
                     <div class="form-group row">
                       <label for="MeetingStartDate" class="col-sm-2 col-form-label">Meeting Start Date</label>
-                      <div class="col-sm-3 date-picker">
+                      <div class="col-sm-3">
                         <input id="MeetingStartDate" class="form-control" type="date" placeholder="Select your start date" formControlName="MeetingStartDate">
                       </div>
                       <label for="MeetingEndDate" class="col-sm-3 col-form-label text-right">Meeting End Date</label>
-                      <div class="col-sm-3 date-picker">
+                      <div class="col-sm-3">
                         <input id="MeetingEndDate" class="form-control" type="date" placeholder="Select your end date" formControlName="MeetingEndDate">
                       </div>
                     </div>
@@ -56,29 +56,35 @@
                       <div class="form-group row">
                         <label for="SessionTopic1" class="col-sm-2 col-form-label"><b>Session Topic 1</b></label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="SessionTopic1">
+                          <input type="text" class="form-control" id="SessionTopic1" formControlName="sessionTopic">
                         </div>
                       </div>
                       <div class="form-group row">
                         <label for="Preseenter" class="col-sm-2 col-form-label">Preseenter</label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="Preseenter">
+                          <input type="text" class="form-control" id="Preseenter" formControlName="presenter">
                         </div>
                       </div>
                       <div class="form-group row">
                         <label for="ExternalPresenter" class="col-sm-2 col-form-label">External Presenter</label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="ExternalPresenter">
+                          <input type="text" class="form-control" id="ExternalPresenter" formControlName="externalPresenter">
                         </div>
                       </div>
                       <div class="form-group row">
                         <label for="MeetingDate" class="col-sm-2 col-form-label">Meeting Date</label>
-                        <div class="col-sm-3 date-picker">
-                          <input id="MeetingDate" class="form-control" type="text" placeholder="22/03/2020">
+                        <div class="col-sm-3">
+                          <input id="MeetingDate" class="form-control" type="date" placeholder="22/03/2020" formControlName="MeetingStartDate">
                         </div>
-                        <label for="MeetingEndDate" class="col-sm-3 col-form-label text-right">Meeting End Date</label>
-                        <div class="col-sm-3 date-picker">
-                          <input id="MeetingEndDate" class="form-control" type="text" placeholder="Select your end date">
+                      </div>
+                      <div class="form-group row">
+                        <label for="SessionStartTime" class="col-sm-2 col-form-label">Session Start Time</label>
+                        <div class="col-sm-3">
+                          <input id="SessionStartTime" class="form-control" type="time" placeholder="22/03/2020" formControlName="SessionStartTime">
+                        </div>
+                        <label for="SessionEndTime" class="col-sm-3 col-form-label text-right">Session End Time</label>
+                        <div class="col-sm-3">
+                          <input id="SessionEndTime" class="form-control" type="time">
                         </div>
                       </div>
                       <div class="form-group row">
@@ -93,10 +99,6 @@
                           <textarea class="form-control" id="OtherInformation"></textarea>
                         </div>
                       </div>
-                    </div>
-                    <div id="cloned" style="display: none;">
-                      <hr>
-
                     </div>
                     <div class="form-group row">
                       <div class="d-flex col">
@@ -114,63 +116,7 @@
               <li [ngbNavItem]="3">
                 <a ngbNavLink>Meeting Summary</a>
                 <ng-template ngbNavContent>
-                    <div id="sesion-topic-1">
-                      <div class="form-group row">
-                        <label for="SessionTopic1" class="col-sm-2 col-form-label"><b>Session Topic 1</b></label>
-                        <div class="col-sm-9">
-                          <input type="text" class="form-control" id="SessionTopic1">
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="Preseenter" class="col-sm-2 col-form-label">Preseenter</label>
-                        <div class="col-sm-9">
-                          <input type="text" class="form-control" id="Preseenter">
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="ExternalPresenter" class="col-sm-2 col-form-label">External Presenter</label>
-                        <div class="col-sm-9">
-                          <input type="text" class="form-control" id="ExternalPresenter">
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="MeetingDate" class="col-sm-2 col-form-label">Meeting Date</label>
-                        <div class="col-sm-3 date-picker">
-                          <input id="MeetingDate" class="form-control" type="text" placeholder="22/03/2020">
-                        </div>
-                        <label for="MeetingEndDate" class="col-sm-3 col-form-label text-right">Meeting End Date</label>
-                        <div class="col-sm-3 date-picker">
-                          <input id="MeetingEndDate" class="form-control" type="text" placeholder="Select your end date">
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="MeetingLocaltion" class="col-sm-2 col-form-label">Meeting Localtion</label>
-                        <div class="col-sm-9">
-                          <input type="text" class="form-control" id="MeetingLocaltion">
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="OtherInformation" class="col-sm-2 col-form-label">Other Information</label>
-                        <div class="col-sm-9">
-                          <textarea class="form-control" id="OtherInformation"></textarea>
-                        </div>
-                      </div>
-                    </div>
-                    <div id="cloned" style="display: none;">
-                      <hr>
-
-                    </div>
-                    <div class="form-group row">
-                      <div class="d-flex col">
-                        <a class="btn-orange-sm btn" id="addNew" href="#">+ Add Session Topic 2</a>
-                      </div>
-                    </div>
-                    <div class="form-group row">
-                      <div class="d-flex justify-content-center col">
-                        <button class="btn-primary btn mr-2"  (click)="nav.select(2)">Cancel</button>
-                        <button class="btn-secondary btn">Save and Continue</button>
-                      </div>
-                    </div>
+                    
                 </ng-template>
               </li>
             </ul>
