--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
+@import 'src/variables';
+
 ng-sidebar-container {position: absolute;}
 ng-sidebar {display:table-cell; width:220px;}
-.ng-sidebar__content {padding-left:220px;display:table-cell;position:relative;}
-::ng-deep .ng-sidebar {width:220px; background:#181f2c;}
-.toogle-search {display:inline-block;vertical-align: top;}
+.ng-sidebar__content {padding-left:220px;display:$DispalyTableCell;position:relative;}
+::ng-deep .ng-sidebar {width:220px; background:$SideNavBgColor;}
+.toogle-search {display:$DisplayInlineBlock;vertical-align: top;}
 
 /**NavBar Css**/
 .navbar { padding-left: 220px;
@@ -10,15 +12,15 @@ ng-sidebar {display:table-cell; width:220px;}
       img { margin: 0 auto; }
     }
     .navbar-brand .navbar-toggler{display: none;}
-    .sidenavWrap {background: #181f2c;position:fixed;left:0;top:0;bottom: 0;z-index: 2;padding-top: 95px;min-width: 220px;transition: 0.5s;width: 220px;overflow: hidden;}
+    .sidenavWrap {background: $SideNavBgColor;position:fixed;left:0;top:0;bottom: 0;z-index: 2;padding-top: 95px;min-width: 220px;transition: 0.5s;width: 220px;overflow: hidden;}
 }
 
 /**TopNav Css**/
-.top-nav { background:#fff; position:fixed; left:calc(0px + 220px); right: 0px; top:0; z-index: 1; transition: 0.5s; padding-top: 4px; padding-bottom: 4px;
+.top-nav { background:$BgWhite; position:fixed; left:calc(0px + 220px); right: 0px; top:0; z-index: 1; transition: 0.5s; padding-top: 4px; padding-bottom: 4px;
   .nav-user {float:right;padding-right:10px;}
-  .navigation { display: inline-block; padding: 0; margin: 0; margin-right:10px; list-style: none;
-      li { display: inline-block; padding: 0; margin: 0;
-          a { display: inline-block; padding: 6px 5px; margin: 0;}
+  .navigation { display: $DisplayInlineBlock; padding: 0; margin: 0; margin-right:10px; list-style: none;
+      li { display: $DisplayInlineBlock; padding: 0; margin: 0;
+          a { display: $DisplayInlineBlock; padding: 6px 5px; margin: 0;}
         }
     }
 }
@@ -28,9 +30,9 @@ ng-sidebar {display:table-cell; width:220px;}
     &:focus {outline:0;}
     .navbar-toggler-icon,
     .navbar-toggler-icon:before,
-    .navbar-toggler-icon:after { height: 4px; background:#181f2c; width: 28px; position: relative; border-radius: 2px; transition: all 0.3s; }
-    .navbar-toggler-icon:before{ content: ''; height: 100%; width: 100%; left: 0; position: absolute; top: -8px; background:#181f2c;  }
-    .navbar-toggler-icon:after { content: ''; height: 100%; width: 100%; left: 0; position: absolute; bottom: -8px;background:#181f2c; }
+    .navbar-toggler-icon:after { height: 4px; background:#181f2c; width: 28px; position: relative; border-radius: 2px; transition: $AllTransition; }
+    .navbar-toggler-icon:before{ content: ''; height: $Height100; width: $Width100; left: 0; position: absolute; top: -8px; background:#181f2c;  }
+    .navbar-toggler-icon:after { content: ''; height: $Height100; width: $Width100; left: 0; position: absolute; bottom: -8px;background:#181f2c; }
 }
 
 /**Sidebar Toggle Css**/
@@ -38,7 +40,7 @@ ng-sidebar {display:table-cell; width:220px;}
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:before,
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:after { height: 4px; background: #515151; width: 28px; position: relative; border-radius: 2px; }
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:before,
-.sidenavOpend .navbar-toggler > .navbar-toggler-icon:after { content: ''; height: 100%; width: 100%; left: 0; position: absolute; transform: rotate(0); }
+.sidenavOpend .navbar-toggler > .navbar-toggler-icon:after { content: ''; height: $Height100; width: $Width100; left: 0; position: absolute; transform: rotate(0); }
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:before { top: -8px; }
 .sidenavOpend .navbar-toggler > .navbar-toggler-icon:after { bottom: -8px; }
 
@@ -49,11 +51,9 @@ ng-sidebar {display:table-cell; width:220px;}
 
 @media (max-width: 767.98px) {
   ::ng-deep .ng-sidebar {width:60px;}
-  .navbar .navbar-brand {width:100%}
-  .top-nav {margin-top:60px;width: 100%;left: 0 !important;z-index:12 !important;}
-
-  .sidenav > ul > li > a > span {display:none}
-
+  .navbar .navbar-brand {width:$Width100}
+  .top-nav {margin-top:60px;width: $Width100;left: 0 !important;z-index:12 !important;}
+  .sidenav > ul > li > a > span {display:$DisplayNone}
   .top-nav {left:0px}
 
 }
