--- a/src/app/dashboard/minutes-of-meetings/minutes-of-meetings.component.scss
+++ b/src/app/dashboard/minutes-of-meetings/minutes-of-meetings.component.scss
@@ -1,12 +1,14 @@
 
 .meeting-listing {margin:0; padding:0;
-    li{list-style:none; display:table;width:100%;padding-bottom:13px; font-size: 0.8rem;}
-    li > .txt {font-size: 0.9rem;}
-    li > .date {width:100px;font-size: 0.8rem;}
-    li > .time {width:95px;text-align:right;font-size: 0.8rem;}
-    li > div{padding:0 10px;display:table-cell; vertical-align:top;}
-    li > div:first-child {padding-left:0;line-height:normal;}
-    li > div > span{display:block;}
+    li{list-style:none; display:table;width:100%;padding-bottom:13px; font-size: 0.8rem;
+      .txt {font-size: 0.9rem;}
+      .date {width:100px;font-size: 0.8rem;}
+      .time {width:95px;text-align:right;font-size: 0.8rem;}
+      div{padding:0 10px;display:table-cell; vertical-align:top;
+        &:first-child {padding-left:0;line-height:normal;}
+        span{display:block;}
+      }
+    }
 }
 
 input[type=checkbox] {width:14px; height:14px; border-radius:0; background: #fff; display: inline-block;}
