--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,43 +1,46 @@
+@import 'variables';
+
 * {margin:0; padding:0;}
-body { font-family:'Ambit', Arial, Helvetica, sans-serif !important; font-size: 14px; background-color: #e9edf4 !important; transition: margin-left 0s;}
-body, header .navbar .navbar-brand { transition: 0.5s;}
+body {font-family:$FontFamily; font-size:$BaseFont; background-color: $BodyBgColor; transition: margin-left 0s;}
+body, header .navbar .navbar-brand { transition:$DefaultTransition;}
 body.sidenavOpend { margin-left: 220px; padding-top: 64px;
   .sidenavWrap {width:220px;/* background: rgba(24,31,44,1); */}
-  .sidenavWrap + .top-nav {background: #fff;}
+  .sidenavWrap + .top-nav {background: $BgWhite;}
 }
 
 body {
-   h3 {font-size: 1.6rem; font-weight: 400;}
-   h2 {color:#515151;font-size:18px; font-weight:700;}
+  h1 {font-size: $H1FontSize; font-weight: $FontWeight400;}
+  h2 {color:$HeadingColor;font-size:$H2FontSize; font-weight:$FontWeight600;}
+  h3 {font-size: $H3FontSize; font-weight: $FontWeight400;}
 }
 
 .row-zero{margin-left:-15px;margin-right:-15px}
 .row-zero > [class^="col"]{padding-left:0px;padding-right:0px;}
 
-.container.fluid { width:100%; max-width: none; }
-.btn {border-radius:0 !important;}
+.container.fluid { width:$Width100; max-width: none; }
+.btn {border-radius:$ZeroBorderRadius;}
 .btn + .btn {margin-left:0.5rem}
-.btn-primary{background-color: #17a2b8; border: 0}
-.btn-primary:hover{background-color: #1b5fd6; border: 0}
-.btn-secondary{background-color: #fb6362; border: 0;}
-.btn-secondary:hover{background-color: #d24544; border: 0;}
-.btn-orange-sm{background: #ff5a00;padding: 0.2rem 0.9rem;font-size: 1rem;color: #fff;border-radius: 0;border: 0;}
-.btn-orange-sm:hover{ background: #ddd;}
+.btn-primary{background-color: $BtnPrimary; border: $ZeroBorder}
+.btn-primary:hover{background-color: $BtnPrimaryHover; border: $ZeroBorder}
+.btn-secondary{background-color: $BtnSecondary; border: $ZeroBorder;}
+.btn-secondary:hover{background-color: $BtnSecondaryHover; border: $ZeroBorder;}
+.btn-orange-sm{background: $BtnOrange;padding: 0.2rem 0.9rem;font-size: 1rem;color:$TextWhite;border-radius: $ZeroBorderRadius;border: $ZeroBorder;}
+.btn-orange-sm:hover{ background: $BtnOrangeHover;}
 
 
 /* General button style (reset) */
 .anim-btn,
 .sidenav > ul > li > a,
-.top-nav ul.navigation > li > a { border: none; font-size: 18px; color: inherit; background: none; cursor: pointer; padding: 25px 80px; display: inline-block; margin: 15px 30px; letter-spacing: 1px; font-weight: 500; outline: none; position: relative; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
+.top-nav ul.navigation > li > a { border: none; font-size: 18px; color: inherit; background: none; cursor: pointer; padding: 25px 80px; display: $DisplayInlineBlock; margin: 15px 30px; letter-spacing: 1px; font-weight: 500; outline: none; position: relative;  transition: $AllTransition; }
 
 .anim-btn:after,
 .sidenav > ul > li > a:after,
-.top-nav ul.navigation > li > a::after { content: ''; position: absolute; z-index: -1; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s;}
+.top-nav ul.navigation > li > a::after { content: ''; position: absolute; z-index: -1; transition: $AllTransition;}
 
 /* Button Anim SlidefromLef */
 .btn-1c:after,
 .sidenav > ul > li > a:after,
-.top-nav ul.navigation > li > a:after { width: 0%; height: 100%; top: 0; left: 0; background: #fff; }
+.top-nav ul.navigation > li > a:after { width: 0%; height: $Height100; top: 0; left: 0; background:$BgWhite; }
 
 .btn-1c:hover,
 .btn-1c:active,
@@ -50,7 +53,7 @@ body {
 .sidenav > ul > li > a:hover:after,
 .sidenav > ul > li > a:active:after,
 .top-nav ul.navigation > li > a:hover:after,
-.top-nav ul.navigation > li > a:active:after { width: 100%;}
+.top-nav ul.navigation > li > a:active:after { width: $Width100;}
 /* Button Anim SlidefromLef */
 
 /*General Text Headings Style*/
@@ -62,7 +65,7 @@ body {
 
 
 /* Custom Icons */
-.fc, [class^="fc-"]{display:inline-block;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale; }
+.fc, [class^="fc-"]{display:$DisplayInlineBlock;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale; }
 .fc:before, [class^="fc-"]:before { content: ''; min-width: 36px; min-height: 36px; background-position: center; background-repeat: no-repeat; background-size: auto; margin: 0 auto; display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center; }
 .fc-home:before { background-image: url(/assets/images/common/icons/fc-home.png); }
 .fc-home.dark:before { background-image: url(/assets/images/common/icons/fc-home-d.png); }
@@ -86,23 +89,24 @@ body {
 .fc-all-documents:before { background-image: url(/assets/images/common/icons/fc-all-documents.png); }
 /* Custom Icons */
 
-
-.wrapper {display: inline-block;margin: 65px 0 0 220px;transition: all 0.3s;overflow: hidden;width:calc(100% - 220px);}
-.sidenavClosed .wrapper {margin:65px 0px 0 0px; transition: all 0.3s;width:calc(100% - 0%);}
+.wrapper.dashboard {margin: 44px 0 0 220px;}
+.wrapper {display: $DisplayInlineBlock;margin: 65px 0 0 220px;transition: $AllTransition;overflow: hidden;width:calc(100% - 220px);}
+.sidenavClosed .wrapper.dashboard {margin:44px 0px 0 0px;}
+.sidenavClosed .wrapper {margin:65px 0px 0 0px; transition: $AllTransition;width:calc(100% - 0%);}
 .main-container p {text-align:justify;}
 
 /**TopMenu Css**/
-.top-menu {display:inline-block;
-  .sidenav { height:auto;  width:100%;padding-top:0px !important;
-        li { display: inline-block !important;
-          a { display: inline-block; padding:13px 20px 13px 20px !important; color: #fff;font-family:'Ambit' }
+.top-menu {display:$DisplayInlineBlock;
+  .sidenav { height:auto;  width:$Width100;padding-top:0px !important;
+        li { display: $DisplayInlineBlock !important;
+          a { display: $DisplayInlineBlock; padding:13px 20px 13px 20px !important; color:$TextWhite;font-family:$FontFamily }
         }
         li > a > span,
-        li.all-doc > a > span {display: none;}
+        li.all-doc > a > span {display: $DisplayNone;}
         li > a > i {position: absolute; left:12px;top:5px;}
         li.all-doc > a {line-height:normal;}
         li.all-doc > a > i {top:5px !important}
-        li.abt {display:none !important;}
+        li.abt {display:$DisplayNone !important;}
         li > a:hover .fc-home:before,
         li > a .fc-home:before { background-image: url(/assets/images/common/icons/fc-home-d.png); }
         li > a .fc-user-plus:before { background-image: url(/assets/images/common/icons/fc-user-plus-d.png); }
@@ -111,11 +115,13 @@ body {
         li > a .fc-info:before { background-image: url(/assets/images/common/icons/fc-info-d.png); }
         li > a .fc-all-documents:before { background-image: url(/assets/images/common/icons/fc-all-documents-d.png); }
   }
-  .copy-txt {display:none;}
+  .copy-txt {display:$DisplayNone;}
 }
-.main-container {background:#fff; width:100%; display:inline-block;padding:1rem;}
+.main-container {background:$BgWhite; width:$Width100; display:$DisplayInlineBlock;padding:1rem;}
 
-.graybg {background:#f7f7f7;height:100%;}
+.graybg {background:$BgGray;height:$Height100;
+  .cust-card {background:$BgGray;}
+}
 .tbl-form.table thead th {border-top:0;border-bottom:0;vertical-align: top;font-size:14px; font-family: 'Microsoft New Tai Lue';}
 .tbl-form.table td, .tbl-form.table th {border-top:0;}
 .tbl-form.table td {font-size:15px; padding:6px 11px;line-height: normal;}
@@ -124,8 +130,8 @@ body {
 .table.table-bordered td {padding:0.50rem;}
 .table .btn {padding:0.1rem 1.1rem}
 // .wrap .card {border-radius:0; padding:510px 15px 0 15px; border:0;}
-.cust-card {border-radius:0; padding:10px 15px 0 25px; border:0;
-  h2 {line-height:30px; display: inline-block;vertical-align: middle;position: relative;}
+.cust-card {border-radius:$ZeroBorderRadius; padding:10px 10px 0 10px; border:$ZeroBorder;background:$BgWhite;
+  h2 {line-height:30px; display: $DisplayInlineBlock;vertical-align: middle;position: relative;}
 }
 
 
@@ -135,8 +141,8 @@ body {
 
 
 @media (max-width: 767.98px) {
-
+  .wrapper.dashboard {margin: 102px 0 0 60px;width: calc(100% - 60px)}
   .wrapper {margin: 132px 0 0 60px;width: calc(100% - 60px);}
   .sidenavClosed .wrapper {margin: 112px 0 0 0px;width: calc(100% - 0px);}
-  .container, .container-sm {max-width: 100% !important;width: 100%;}
+  .container, .container-sm {max-width: $Width100;width: $Width100;}
 }
